--- a/src/ChinaTower.StationPlanning/Views/Account/Create.cshtml
+++ b/src/ChinaTower.StationPlanning/Views/Account/Create.cshtml
@@ -10,7 +10,7 @@
         <table class="create-user">
             <tr>
                 <td class="td-gray">用户名</td>
-                <td><input type="text" name="username" placeholder="用空格分割城市" value="@ViewBag.Cities" class="form-control" /></td>
+                <td><input type="text" name="username" placeholder="" value="@ViewBag.Cities" class="form-control" /></td>
             </tr>
             <tr>
                 <td class="td-gray">角色</td>
