--- a/src/ChinaTower.StationPlanning/Views/Account/Index.cshtml
+++ b/src/ChinaTower.StationPlanning/Views/Account/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="row">
     <div class="col-lg-12">
         <section class="panel">
-            <header class="panel-heading">用户列表 <a asp-action="Create" asp-controller="Account">+ 创建用户</a></header>
+            <header class="panel-heading">用户列表 <a style="float:right" asp-action="Create" asp-controller="Account">+ 创建用户</a></header>
             <div class="pull-out m-t-small">
                 <table class="table table-striped b-t text-small">
                     <thead>
