--- a/src/ChinaTower.StationPlanning/Views/Form/E.cshtml
+++ b/src/ChinaTower.StationPlanning/Views/Form/E.cshtml
@@ -1,17 +1,17 @@
 ﻿@model IEnumerable<Form>
 @{
-    ViewBag.Title = "储备库表单管理";
+    ViewBag.Title = "在建难点库";
 }
 
 <div class="clearfix">
-    <h4>储备库表单管理</h4>
+    <h4>在建难点库</h4>
 </div>
 
 <div class="row">
     <div class="col-lg-8">
         <section class="panel">
             <header class="panel-heading">
-                储备库表单 <a href="?raw=true" style="float:right">导出</a>
+                在建难点库 <a href="?raw=true" style="float:right">导出</a>
             </header>
             <div class="pull-out m-t-small" style="overflow-x: auto;white-space:nowrap; text-overflow:ellipsis;">
                 <table class="table table-striped b-t text-small">
@@ -84,7 +84,7 @@
     </div>
 </div>
 <form id="frmDeleteForm" asp-action="Delete" asp-controller="Form">
-    <input type="hidden"id="formId" name="id" />
+    <input type="hidden" id="formId" name="id" />
 </form>
 <script>
     function deleteForm(id)
