--- a/src/ChinaTower.StationPlanning/Views/Form/E.cshtml
+++ b/src/ChinaTower.StationPlanning/Views/Form/E.cshtml
@@ -17,7 +17,7 @@
                 <table class="table table-striped b-t text-small">
                     <thead>
                         <tr>
-                            @foreach (var x in ChinaTower.StationPlanning.Controllers.FormController.HeaderOfA)
+                            @foreach (var x in ChinaTower.StationPlanning.Controllers.FormController.HeaderOfE)
                             {
                                 <th>@x</th>
                             }
@@ -70,7 +70,7 @@
                             </td>
                         </tr>
                     }
-                    @foreach (var x in ChinaTower.StationPlanning.Controllers.FormController.HeaderOfA)
+                    @foreach (var x in ChinaTower.StationPlanning.Controllers.FormController.HeaderOfE)
                     {
                         <tr>
                             <td><input type="text" name="text" placeholder="@x" class="form-control" /></td>
