--- a/src/ChinaTower.StationPlanning/Views/Shared/_Layout.cshtml
+++ b/src/ChinaTower.StationPlanning/Views/Shared/_Layout.cshtml
@@ -100,10 +100,10 @@
                 <a href="#"><i class="fa-edit fa fa-lg"></i>表单信息</a>
                 <ul class="dropdown-menu">
                     <li><a asp-controller="Form" asp-action="A">储备库</a></li>
-                    <li><a asp-controller="Form" asp-action="B">存量资源</a></li>
-                    <li><a asp-controller="Form" asp-action="C">新建站址</a></li>
-                    <li><a asp-controller="Form" asp-action="D">潜在难点库</a></li>
-                    <li><a asp-controller="Form" asp-action="E">在建难点库</a></li>
+                    <li><a asp-controller="Form" asp-action="B">在建难点库</a></li>
+                    <li><a asp-controller="Form" asp-action="C">存量资源库</a></li>
+                    <li><a asp-controller="Form" asp-action="D">新建站址库</a></li>
+                    <li><a asp-controller="Form" asp-action="E">潜在难点库</a></li>
                 </ul>
             </li>
             @if (User.AnyRoles("Root, Master"))
