--- a/src/ChinaTower.StationPlanning/Views/Form/A.cshtml
+++ b/src/ChinaTower.StationPlanning/Views/Form/A.cshtml
@@ -4,14 +4,14 @@
 }
 
 <div class="clearfix">
-    <h4>储备库表单管理</h4>
+    <h4>站址储备库表单管理</h4>
 </div>
 
 <div class="row">
     <div class="col-lg-8">
         <section class="panel">
             <header class="panel-heading">
-                储备库表单 <a href="?raw=true" style="float:right">导出</a>
+                站址储备库表单 <a href="?raw=true" style="float:right">导出</a>
             </header>
             <div class="pull-out m-t-small" style="overflow-x: auto;white-space:nowrap; text-overflow:ellipsis;">
                 <table class="table table-striped b-t text-small">
