--- a/src/ChinaTower.StationPlanning/Views/Home/Index.cshtml
+++ b/src/ChinaTower.StationPlanning/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
                 <div class="sparkline inline" data-type="pie" data-height="175" data-slice-colors="['#233445','#3fcf7f','#ff5f5f','#f4c414']">@(ViewBag.Normal),@(ViewBag.Store),@(ViewBag.Hard),@(ViewBag.Pre)</div>
                 <div class="line pull-in"></div>
                 <div class="text-mini">
-                    <i class="fa fa-circle text-info"></i> 正常 @(ViewBag.NormalRatio)%
+                    <i class="fa fa-circle text-info"></i> 存量宏站+室分 @(ViewBag.NormalRatio)%
                     <i class="fa fa-circle text-success"></i> 储备 @(ViewBag.StoreRatio)%
                     <i class="fa fa-circle text-danger"></i> 难点 @(ViewBag.HardRatio)%
                     <i class="fa fa-circle text-warning"></i> 预选 @(ViewBag.PreRatio)%
